[aliases]
make = sdist bdist_wheel

[metadata]
name = apachelogs
#version = # Set in setup.py
description = Parse Apache access logs
long_description = file:README.rst
author = John Thorvald Wodder II
author_email = apachelogs@varonathe.org
license = MIT
license_file = LICENSE
url = https://github.com/jwodder/apachelogs

keywords =
    ###

classifiers =
    Development Status :: 3 - Alpha
    #Development Status :: 4 - Beta
    #Development Status :: 5 - Production/Stable
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: Implementation :: CPython
    License :: OSI Approved :: MIT License
    ###

[options]
packages = find:
python_requires = ~=3.4
install_requires =
    attrs           ~= 17.1
    python-dateutil ~= 2.6
