[aliases]
make = sdist bdist_wheel

[metadata]
name = apachelogs
#version = # Set in setup.py
description = Parse Apache access logs
long_description = file:README.rst
long_description_content_type = text/x-rst
author = John Thorvald Wodder II
author_email = apachelogs@varonathe.org
license = MIT
license_file = LICENSE
url = https://github.com/jwodder/apachelogs

keywords =
    Apache
    access logs
    httpd
    logfiles

classifiers =
    Development Status :: 3 - Alpha
    #Development Status :: 4 - Beta
    #Development Status :: 5 - Production/Stable
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    License :: OSI Approved :: MIT License
    Intended Audience :: System Administrators
    Topic :: Internet :: WWW/HTTP :: HTTP Servers
    Topic :: System :: Logging
    Topic :: Text Processing :: Filters

project_urls =
    Source Code = https://github.com/jwodder/apachelogs
    Bug Tracker = https://github.com/jwodder/apachelogs/issues
    Say Thanks! = https://saythanks.io/to/jwodder

[options]
packages = find:
python_requires = ~=3.5
install_requires =
    attrs >= 17.1
