[metadata]
name = apachelogs
version = attr:apachelogs.__version__
description = Parse Apache access logs
long_description = file:README.rst
long_description_content_type = text/x-rst
author = John Thorvald Wodder II
author_email = apachelogs@varonathe.org
license = MIT
license_files = LICENSE
url = https://github.com/jwodder/apachelogs

keywords =
    Apache
    access logs
    httpd
    logfiles

classifiers =
    Development Status :: 4 - Beta
    #Development Status :: 5 - Production/Stable
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    License :: OSI Approved :: MIT License
    Intended Audience :: System Administrators
    Topic :: Internet :: WWW/HTTP :: HTTP Servers
    Topic :: System :: Logging
    Topic :: Text Processing :: Filters

project_urls =
    Source Code = https://github.com/jwodder/apachelogs
    Bug Tracker = https://github.com/jwodder/apachelogs/issues
    Documentation = https://apachelogs.readthedocs.io

[options]
packages = find:
package_dir =
    =src
python_requires = ~=3.6
install_requires =
    attrs   >= 17.1
    pydicti ~= 1.1

[options.packages.find]
where = src
